@@ -1,5 +1,9 @@
 2003-10-22 Damien Sandras  <dsandras@seconix.com>
 
+	* src/config.cpp: Fixed possible bug in previous commit.
+	
+2003-10-22 Damien Sandras  <dsandras@seconix.com>
+
 	* lib/gconf_widgets_extensions.c, lib/gconf_widgets_extensions.h:
 	Added convenience functions to play with gconf settings.
 
